# scout_nav2

./: .gitmodules  README.md  park_and_buttonpress.sh
agilex_scout/: CMakeLists.txt  README.md  package.xml
agilex_scout/config/: ros2_gz_bridge_config.yaml
agilex_scout/launch/: scout_robot_lidar.launch.py  simulate_control_gazebo.launch.py
agilex_scout/rviz/: model_display.rviz  real_scout_display.rviz
agilex_scout/urdf/: robot.urdf.xacro
agilex_scout/urdf/mobile_robot/: scout_v2.gazebo  scout_v2.urdf.xacro  scout_v2.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
agilex_scout/urdf/sensors/: os1.urdf
aws-robomaker-small-warehouse-world/: CMakeLists.txt  README.md  package.xml
aws-robomaker-small-warehouse-world/env-hooks/: aws_robomaker_small_warehouse_world.dsv.in
aws-robomaker-small-warehouse-world/gui/: gazebo_gui.config
aws-robomaker-small-warehouse-world/launch/: no_roof_small_warehouse.launch.py  small_warehouse.launch.py
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_Bucket_01/: model.config
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_ClutteringA_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_ClutteringC_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_ClutteringD_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_DeskC_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_GroundB_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_Lamp_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_PalletJackB_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_RoofB_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_ShelfD_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_ShelfE_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_ShelfF_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_TrashCanC_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/models/aws_robomaker_warehouse_WallB_01/: model.config  model.sdf
aws-robomaker-small-warehouse-world/worlds/no_roof_small_warehouse/: no_roof_small_warehouse.world
aws-robomaker-small-warehouse-world/worlds/small_warehouse/: small_warehouse.world
mobile_manipulation/: CMakeLists.txt  README.md  package.xml
mobile_manipulation/include/: park_and_interact.hpp
mobile_manipulation/launch/: multiple_aruco_nodes.launch.py  navigate_and_button_press_demo.launch.py  parking.launch.py
mobile_manipulation/mobile_manipulation/: costmap_2d.py  footprint_collision_checker.py  park_robot.py
mobile_manipulation/scripts/: park_robot.py  parking_demo.py  robot_parking_action_server.py
mobile_manipulation/src/: park_and_interact.cpp
mobile_manipulation_interfaces/: CMakeLists.txt  package.xml
mobile_manipulation_interfaces/action/: ButtonFind.action  ButtonPress.action  Parking.action
nav2_bringup/: CMakeLists.txt  README.md  package.xml
nav2_bringup/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  slam_localization_launch.py
scout_nav2/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
scout_nav2/launch/: nav2.launch.py  parking.launch.py
scout_nav2/maps/: map_slam.yaml
scout_nav2/maps/airlab/: airlab.data  map_airlab.pgm  map_airlab.yaml  map_hallway.pgm  map_hallway.yaml  map_lidar2d.pgm  map_lidar2d.yaml  map_lidar3d.pgm  map_lidar3d.yaml  map_lidar3d_v2.pgm  map_lidar3d_v2.yaml  map_lidar3d_v3.pgm  map_lidar3d_v3.yaml  map_longhallway.pgm  map_longhallway.yaml
scout_nav2/maps/warehouse/: map_slam.pgm  map_slam.yaml  map_slam_cleaned.pgm  map_slam_v2.pgm  map_slam_v2.yaml  warehouse_lidar3d.data
scout_nav2/params/: bt_nav2pose.xml  nav2_params.yaml  nav2_params_lidar2d.yaml  nav2_params_lidar3d.yaml  nav2_params_old.yaml  nav2_params_scout.yaml  scout_amcl.yaml  scout_slam_loc_stvl.yaml  scout_slam_localization.yaml  sim_lidar3d_amcl.yaml  sim_slam_localization.yaml
scout_nav2/rviz/: nav2.rviz
scout_nav2/scout_nav2/: costmap_2d.py  example_navigate_to_pose.py  footprint_collision_checker.py  park_robot.py  robot_navigator.py
spatio_temporal_voxel_layer/: installation_instructions.md
