<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>mobile_manipulation</name>
	<version>0.1.0</version>
	<description>Mobile manipulation tasks using AgileX Scout with NAV2 and Igus Rebel arm with MoveIt2</description>
	<maintainer email="simone.giampa@mail.polimi.it">Simone Giampà</maintainer>
	<license>AIRLAB</license>
	<url type="website">polimi.it</url>
	<url type="repository">https://github.com/AIRLab-POLIMI/scout_nav2</url>
	<author email="simone.giampa@mail.polimi.it">Simone Giampà</author>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>ament_cmake_python</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>rclpy</depend>
	
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>