<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>scout_nav2</name>
	<version>1.0.0</version>
	<description>Nav2 with Scout robot in gazebo simulation </description>

	<maintainer email="simone.giampa@mail.polimi.it">Simone Giampà</maintainer>
	<license>AIRLAB</license>
	<url type="website">polimi.it</url>
	<url type="repository">https://github.com/AIRLab-POLIMI/scout_nav2</url>
	<author email="simone.giampa@mail.polimi.it">Simone Giampà</author>

	<exec_depend>rclpy</exec_depend>
	<depend>nav2</depend>
	<depend>nav2_bringup</depend>
	<exec_depend>nav2_msgs</exec_depend>
	<exec_depend>action_msgs</exec_depend>
	<exec_depend>lifecycle_msgs</exec_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
		<build_type>ament_python</build_type>
	</export>
</package>